fix scrollbar issue

--- a/services/frontend/src/styles/main.css
+++ b/services/frontend/src/styles/main.css
@@ -24,7 +24,7 @@ code, pre {
 }
 
 #app {
-  width: 100dvw;
+  width: 100%;
 }
 
 a {
